Updated project structure

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>zappar-three-template</title>
+  <title>Zappar Three Template</title>
 </head>
 
 <body>
-  <div id="zappar-placement-ui">Tap here to place the object</div>
+  <canvas class="webgl"></canvas>
+  <button id="zappar-placement-ui">Tap here to place the object</button>
   <script type="module" src="/src/main.js"></script>
 </body>
 
